--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,8 @@ install:
 - pip install jinja2
 before_script:
 - mkdir -p builds/build
-script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py . 2>&1 | tee -a builds/build/buildlog.txt
+script: PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-build.py .
+  2>&1 | tee -a builds/build/buildlog.txt
 branches:
   only:
   - master
@@ -22,4 +23,4 @@ after_script:
 - PATH=/home/travis/virtualenv/python2.7.8/bin/:$PATH fontbakery-travis-deploy.py
 env:
   global:
-    secure: ooKFy4cZ2Mr+56x7KDqt9i+5+z1kftUZFXPQrpiBd8vsKxkfGWhHj5Ab5ibIDNfkS9bb8bCzXtclhkMWnZHiTF5vt45S0Zpb8PTh6xA3nEQ2s97yCB8/KJHrTc/k74J7tIB+Zv98yrQJ0VbjTRpBJnZXYhMvxftGDzyK0jsSSgM=
+    secure: SMEmMZJYWqIWHdPnegfwkeWEubZlN8QkDHOvGKO4bzUcX+MSlfCZoG8I4B5KPPdcvBI6xvx3EksHzSqHHlbATtZSCTvEWoZ/HOF+Qov6tJCz1SKOJ376EhaE2SMGmwPrQ+hDBRmHocphqoGFM4Rta3fLQsjQCqmrvLrLyXxJ2+I=
